# copilot-agent-training

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: .gitignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  test_main.py
frontend/: README.md
frontend/src/: App.css  App.jsx  index.css
testing/: endpoints.http
